<resources>
    <string name="app_name">Vitaflex</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="about_us">About Us:</string>
    <string name="about_message">Welcome to our Fitness and Diet Tracking app, your personal health companion designed to help you stay on track with your wellness goals. Whether you\'re looking to lose weight, maintain your current lifestyle, or gain muscle, our app provides the tools and insights you need to succeed.</string>
    <string name="our_mission">Our Mission:</string>
    <string name="mission_message">At The A-Team, our mission is to empower individuals to take control of their health and well-being through an easy-to-use platform that combines fitness tracking, nutritional insights, and community support. We believe in providing users with the right data and resources to make informed decisions about their diet and exercise routines, all while keeping the experience enjoyable and motivating.</string>
    <string name="what_we_offer">What we Offer:</string>
    <string name="offer_message">Create, save, and track custom recipes and food plans tailored to your personal goals. Set your fitness and diet goals, track your progress, and make adjustments as needed with data-driven insights. Seamless Logging: Quickly log your food intake and workouts to stay on track with your diet and fitness goals and a comprehensive database of nutritional information. Progress Tracking: Visualize your journey with detailed progress reports that monitor your weight, calorie intake, exercise performance, and more.</string>
    <string name="meet_the_a_team">Meet the A-Team:</string>
    <string name="meet_a_team_message">We are The A-Team, a dedicated group of developers and fitness enthusiasts who believe in combining technology with healthy living. Our goal is to make it easier for you to lead a healthier lifestyle, no matter where you are on your fitness journey.Each of us brings a unique set of skills to the table, from app design to user experience and backend development, but together, we share one common goal: to build a tool that makes achieving your health goals easier and more fun. Thank you for choosing our app to support your fitness journey. We’re constantly evolving and improving, so stay tuned for exciting updates, new features, and more!</string>
    <string name="back_btn">back_btn</string>
    <string name="account">Account</string>
    <string name="change_name">Change Name:</string>
    <string name="change_email">Change Email:</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="search_for_ingredient">Search for Ingredient</string>
    <string name="search">Search</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="app_settings">App Settings</string>
    <string name="app_language">App Language:</string>
    <string name="english">English</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="app_mode">App Mode:</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="workout_notifications">Workout Notifications</string>
    <string name="set_a_workout_reminder">Set a Workout Reminder</string>
    <string name="meal_notifications">Meal Notifications</string>
    <string name="set_a_meal_reminder">Set a Meal Reminder</string>
    <string name="save_settings">Save Settings</string>
    <string name="daily_meals">Daily Meals</string>
    <string name="previous_week">Previous Week</string>
    <string name="date_range">6 Aug 2024 - 12 Aug 2024</string>
    <string name="next_week">Next Week</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="breakfast">Breakfast</string>
    <string name="add">+ Add</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="recipes">Recipes</string>
    <string name="create_new_recipe">Create New Recipe</string>
    <string name="list_of_ingredients">List Of Ingredients</string>
    <string name="add_more_ingredients">+ Add More Ingredients</string>
    <string name="total_calories_0">Total Calories: 0</string>
    <string name="continue_1">Continue</string>
    <string name="welcome_to_vitaflex">Welcome To Vitaflex</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="dynamic_health_dynamic_you">Dynamic Health, Dynamic You!</string>
    <string name="achieve_your_personal_fitness_goals_with_everything_you_need_free_of_charge">Achieve your personal fitness goals with everything you need—free of charge!</string>
    <string name="get_started">Get Started!</string>
    <string name="sign_up">Sign Up</string>
    <string name="meal_plans">Meal Plans</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>
    <string name="meals">Meals</string>
    <string name="today">Today</string>
    <string name="this_week">this Week</string>
    <string name="profile">Profile</string>
    <string name="age">Age:</string>
    <string name="_21">21</string>
    <string name="gender">Gender:</string>
    <string name="weight">Weight:</string>
    <string name="_63_4_kg">63.4 kg</string>
    <string name="height">Height:</string>
    <string name="_165_cm">165 cm</string>
    <string name="body_mass_index">Body Mass Index:</string>
    <string name="_26_3">26.3</string>
    <string name="progress_1">Progress</string>
    <string name="from_date">From Date:</string>
    <string name="select_a_date">Select a date</string>
    <string name="to_date">To Date:</string>
    <string name="display_calories_consumed">Display Calories Consumed</string>
    <string name="select_a_date_range_to_view_graph">Select a date range to view graph</string>
    <string name="recipe_details">Recipe details</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="add_meal">Add Meal</string>
    <string name="recipe_information">Recipe Information</string>
    <string-array name="recipe_category">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="save_recipe">Save Recipe</string>
    <string name="profile_1">Profile</string>
    <string name="units_of_measurments">Units of Measurements</string>
    <string name="support">Support</string>
    <string name="app_settings_1">App Settings</string>
    <string name="final_step">Final Step!</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="gender_1">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="current_weight">Current Weight</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="current_height">Current Height</string>
    <string name="enter_height">Enter Height</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="tell_us_about_your_goals">Tell Us About Your Goals?</string>
    <string name="weight_goal">Weight Goal:</string>
    <string name="lose">Lose</string>
    <string name="gain">Gain</string>
    <string name="what_is_your_target_weight">What is your target weight?</string>
    <string name="how_often_do_you_exercise">How often do you exercise?</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="account_details">Account Details</string>
    <string name="full_name">Full Name</string>
    <string name="introduction">Introduction:</string>
    <string name="intro_message">Welcome to our Fitness and Diet Tracking application. These Terms and Conditions govern your use of the App, which is provided by The A-Team (referred to as \'we,\' \'us,\' or \'our\'). By downloading, accessing, or using the App, you agree to comply with these terms. If you do not agree to these terms, please do not use the App.</string>
    <string name="app_overview">App Overview:</string>
    <string name="overview_message">The App is designed to help users track their fitness and dietary goals. It is a free-to-use service available on the Google Play Store, with no purchase necessary. The App leverages Firebase as its database to store user data and uses the CalorieNinja API to provide nutritional information.</string>
    <string name="user_accounts">User Accounts:</string>
    <string name="user_account_message">You will need to create an account to access all features of the App. When creating an account, you agree to provide accurate, current and complete information, keep your account credentials confidential and secure, notify us immediately if you believe there has been unauthorised use of your account. We are not responsible for any loss or damage arising from unauthorised access to your account.</string>
    <string name="use_of_the_app">Use of the App:</string>
    <string name="app_use_message">By using this App, you agree to use the App for personal, non-commercial purposes, not engage in any illegal, fraudulent, or harmful activities while using the App, respect the privacy and rights of other users and not use any automated means to extract data from the App.</string>
    <string name="data_collection_and_privacy">Data Collection and Privacy:</string>
    <string name="data_collection_message">We value your privacy. All personal data collected via the App is stored securely in Firebase and is handled in accordance with our Privacy Policy. By using the App, you agree that your personal data, including but not limited to name, email, and fitness-related data, will be stored and processed by Firebase. We may use aggregated, anonymized data for research and development to improve the App’s services.</string>
    <string name="calorieninja_api">CalorieNinja API:</string>
    <string name="ninja_message">Our App integrates with the CalorieNinja API to provide nutritional information about food items. By using the App, you acknowledge and agree that the accuracy of food data and calorie counts depends on the information provided by the CalorieNinja API. We are not responsible for any errors, omissions, or inaccuracies in the nutritional data provided by CalorieNinja. You should not rely solely on the information provided by the App for medical, dietary, or health-related decisions.</string>
    <string name="limitation_of_liability">Limitation of Liability:</string>
    <string name="limitation_message">We strive to provide accurate and up-to-date information, but we do not guarantee the accuracy or reliability of the App’s content. To the fullest extent permitted by law, we disclaim all warranties, express or implied, regarding the App and its content. We are not liable for any direct, indirect, incidental, or consequential damages resulting from your use of the App, including but not limited to health-related issues arising from reliance on nutritional information.</string>
    <string name="calories">Calories:</string>
    <string name="search_other_food_item">Search Other Food Item:</string>
    <string name="search_item">Search Item</string>
    <string name="add_item">Add Item</string>
    <string name="date">Date</string>
    <string name="meal_name">Meal Name</string>
</resources>