<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F5883F"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/about_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/back_arrow"
            android:contentDescription="@string/back_btn"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/about_heading_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:text="@string/about"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <TextView
                    android:id="@+id/about_aboutUsHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/about_us"
                    android:textColor="@color/swap"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_aboutUsInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/about_message" />

                <TextView
                    android:id="@+id/about_ourMissionHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/our_mission"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/swap"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_ourMissionInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/mission_message" />

                <TextView
                    android:id="@+id/about_whatWeOfferHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/what_we_offer"
                    android:textColor="@color/swap"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_whatWeOfferInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/offer_message" />

                <TextView
                    android:id="@+id/about_meetTheATeamHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/meet_the_a_team"
                    android:textColor="@color/swap"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_meetTheATeamInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:text="@string/meet_a_team_message" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>