<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SupportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F5883F"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/support_back_btn"
            android:layout_width="50dp"
            android:layout_marginStart="5dp"
            android:layout_height="50dp"
            android:background="@drawable/back_arrow"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/support_heading_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/support"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <TextView
                    android:id="@+id/support_introductionHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/introduction"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/swap"
                     />

                <TextView
                    android:id="@+id/support_introductionInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/intro_message"
                     />

                <TextView
                    android:id="@+id/support_appOverviewHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/app_overview"
                    android:textColor="@color/swap"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/support_appOverviewInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/overview_message" />

                <TextView
                    android:id="@+id/support_userAccountsHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/user_accounts"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/swap"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/support_userAccountsInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/user_account_message" />

                <TextView
                    android:id="@+id/support_useOfAppHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/use_of_the_app"
                    android:textColor="@color/swap"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/support_useOfAppInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    android:textColor="@color/black"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:text="@string/app_use_message" />

                <TextView
                    android:id="@+id/support_dataCollectionHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:textColor="@color/swap"
                    android:text="@string/data_collection_and_privacy"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/support_dataCollectionInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/data_collection_message" />

                <TextView
                    android:id="@+id/support_calorieNinjaHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/swap"
                    android:layout_marginEnd="25dp"
                    android:text="@string/calorieninja_api"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/support_calorieNinjaInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:text="@string/ninja_message" />

                <TextView
                    android:id="@+id/support_limitOfLiabilityHeading_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:textColor="@color/swap"
                    android:text="@string/limitation_of_liability"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/support_limitOfLiabilityInfo_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    android:textColor="@color/black"
                    android:background="@drawable/input_text_background_1"
                    android:padding="5dp"
                    android:text="@string/limitation_message" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>