<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/tv_meal_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/textColorDefault"
        android:textSize="16sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/tv_meal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_name"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/textColorDefault"
            android:textStyle="bold"/>



        <TextView
            android:id="@+id/tv_meal_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/textColorDefault"
            android:text="@string/calories" />

    </LinearLayout>

</LinearLayout>
