<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".OtherFoodItemsFragment">



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_other_food_item"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/search_item"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColorDefault"
            android:textColorHint="@color/textColorDefault"
            android:background="@drawable/input_text_background"/>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/search"
            android:backgroundTint="#9AF0B1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/nutrition_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:background="@drawable/input_text_background"
            android:textColor="@color/textColorDefault"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/add_ingredient_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_item"
            android:backgroundTint="#F5883F"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:enabled="false"/>
    </LinearLayout>
</ScrollView>



</LinearLayout>
